<resources>
    <string name="app_name">Yomba App</string>
    <string name="buyer_scenario">Buyer scenario</string>
    <string name="invitee_scenario">Invitee scenario</string>
    <string name="game_code">Game Code</string>
    <string name="verification_code">Verification code has been send to +91 9971519559</string>
    <string name="resend_txt">If not <b>RESEND</b></string>
    <string name="verify_btn">VERIFY</string>
    <string name="next_btn">NEXT</string>
    <string name="terms_condition">I read and agreed to terms of use</string>
    <string name="terms_link">(link)</string>
    <string name="promotional_offers">Please send me special offers by email</string>
    <string name="terms_condtion_heading">Terms and Conditions</string>
    <string name="details"><b>Lorem Ipsum</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="back_btn">BACK</string>
    <string name="starting_point">Abraham Garden</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit_btn">Submit</string>
    <string name="verify_code">Verification Code</string>
    <string name="thank_you">Thank you. Your code is confirmed</string>
    <string name="invite_friend">Invite friends to join you</string>
    <string name="sendto">Send To:</string>
    <string name="right_answer">You\'re Amazing!</string>
    <string name="wrong_answer">That\'s Wrong</string>
    <string name="retry_btn">Retry</string>
    <string name="retry_text">Please try again</string>
    <string name="start_playing">You are playing</string>
    <string name="the_crook">The Crook</string>
    <string name="start_play">Start</string>
    <string name="ready_to_play">To Start Game, Click on About</string>
    <string name="good_luck">Good luck.. and .... ENJOY</string>
    <string name="about_btn">ABOUT</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meet_perk">Click NEXT to \n see your Score</string>
    <string name="email_us">Email with special perks was sent your way</string>
    <string name="ok">Ok</string>
    <string name="change_lang">Change Your Default Language</string>
    <string name="enteremail">Please Enter Email Address</string>
    <string name="acceptterms">Please Accept Terms and Conditions</string>
    <string name="codetophone">Enter Code To  \n Verify Your Phone</string>
    <string name="processStarted">verification Process Started</string>
    <string name="enterphone">Please Enter Code To Verify Phone</string>
    <string name="entermobile">Please Enter Mobile Number</string>
    <string name="somethingwrong">Something Went Wrong</string>
    <string name="sixdegitcode">Please Enter SIX Digit Valid Code</string>
    <string name="enterfname">Enter Your FirstName \n</string>
    <string name="enterlname">Enter Your LastName \n</string>
    <string name="enternickname">Enter Your NickName \n</string>
    <string name="copiedcode">Succesfully Copied Invitation Code</string>
    <string name="joinus">Join Us and Start Play Online</string>
    <string name="downloadappfromappstore">\n Download our Yomba App From Google Play Store/IOS App Store. \n  </string>
    <string name="letsplay">Let\'s Play</string>
    <string name="game">Game</string>
    <string name="douwanttoexit">Do You Want Exit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="playerareconnected">Players Are Selected to Play Game</string>
    <string name="game_start_will_soon">Please Wait... Game Will Start Soon</string>
    <string name="game_already_started">This Game is already started, so you can not play this game now..!</string>
    <string name="select_player_to_play">Please Select Player To Play Game</string>
    <string name="instruction">Instruction</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCTokNr5iQ-s3fEr2mvEhroLjznTBXEd_A</string>
    <string name="user_cancelled_image_capture">User Canclled Image Capture</string>
    <string name="sorry_failed_to_capture_image">Sorry Failed to Capture Image</string>
    <string name="skip">Skip</string>
    <string name="get_your_clue">Clue No:</string>
    <string name="btn_ok">OK</string>
    <string name="CLUES">Clues</string>
    <string name="total_score">Total Score:</string>
    <string name="cancel">Cancel</string>
    <string name="about_text">About</string>
    <string name="players_join_game">Players Join The Game</string>
    <string name="no_internet_found">No Internet Connection</string>
    <string name="check_internet_connection">Please Check Your Internet Connection</string>
    <string name="storymsg">Every tour has a story to tell. Not just the story of the city, but the story of the people who call it home. That\'s why, on our tour, you won\'t just see the sites.</string>
    <string name="endpoint">Ordea Square</string>
    <string name="joinNewGame">Join New Game</string>
    <string name="exit">Exit</string>
    <string name="remaining_distance">Remaining Distance : </string>
    <string name="entervalidemail">Please Enter Valid Email Address</string>
    <string name="gamepurchaseOn">Purchase On:</string>
    <string name="dontforgettoopenclue">Would you like a clue?</string>
    <string name="noclueleft">Would you like to see the answer?</string>
    <string name="outof">Out of</string>
    <string name="close">Close</string>
    <string name="about_msg1">You are invited So, you can\'t Start Game \n Don\'t Go anywhere,</string>
    <string name="about_msg2">Start Game Soon.</string>
    <string name="about_msg3">Are You sure You Want To Exit and Join New Game ?</string>
    <string name="email_msg1">Verification Code is Send to Your Email Address. Kidly Check Your Email !!</string>
    <string name="email_msg2">Enter Code To  \n Verify Email Address</string>
    <string name="email_msg3">Enter verification code..!</string>
    <string name="home_msg1">\n Join us Using Below Code : \n</string>
    <string name="play_msg1">Please Enter Your Answer First</string>
    <string name="play_msg2">Please Click On Yomba Icon \n</string>
    <string name="play_msg3">To Upload Answer</string>
    <string name="play_msg4">Are You Sure You Want Skip Task ?</string>
    <string name="play_msg5">Are You sure You Want To Exit and Join New Game ?</string>
    <string name="play_msg6">Permission Denied</string>
    <string name="play_msg7">Without those permission the app is unable to save your profile. App needs to save profile image in your external storage and also need to get profile image from camera or external storage.Are you sure you want to deny this permission?</string>
    <string name="play_msg8">I\'M SURE</string>
    <string name="play_msg9">RE-TRY</string>
    <string name="play_msg10">Something went Wrong</string>
    <string name="sum_msg1">Clue Used :</string>
    <string name="sum_msg2">Wrong Attempt :</string>
    <string name="sum_msg3">Task Skipped :</string>
    <string name="sum_msg4">Save Me Used :</string>
    <string name="sum_msg5">Task Point :</string>
    <string name="sum_msg6">Cons. Point :</string>
    <string name="sum_msg7">Score per Task :</string>
    <string name="about_msg4">About the Game</string>
    <string name="info_msg1">First Name</string>
    <string name="info_msg2">Last Name</string>
    <string name="info_msg3">Nick Name</string>
    <string name="play_msg11">Discover</string>
    <string name="play_msg12">Solve</string>
    <string name="play_msg13">Clues (3)</string>
    <string name="play_msg14">Score</string>
    <string name="discover_msg1">You are looking for :</string>
    <string name="discover_msg2">Remaining Distance :</string>
    <string name="section_msg1">Your answer</string>
    <string name="section_msg2">Enter Your Answer Here</string>
    <string name="finish_msg1">Congratulations.</string>
    <string name="finish_msg2">You\'re done!</string>
    <string name="start_game_msg1">STORY :</string>
    <string name="start_game_msg2">START :</string>
    <string name="start_game_msg3">END :</string>
    <string name="sum_msg8">Summary</string>
    <string name="sum_msg9">The Crook</string>
    <string name="sum_msg10">Overall time :</string>
    <string name="sum_msg11">All-time rank :</string>
    <string name="sum_msg12">Current month rank :</string>
    <string name="sum_msg13">Clue used :</string>
    <string name="sum_msg14">Save Me used :</string>
    <string name="sum_msg15">Number of games you have played :</string>
    <string name="crack_msg1">Your answer</string>
    <string name="invitee_msg1">User NickName</string>
    <string name="invitee_msg2">yomba@setblue.com</string>
    <string name="about_msg5">Before Start Game Click On About</string>

</resources>
