<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.StartGameActivity">
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/pulltorefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/footer_section">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/term_heading"
                android:paddingLeft="40dp"
                android:paddingTop="50dp">
                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_playing"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_size"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:id="@+id/txt_game_name"
                    android:layout_toRightOf="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_crook"
                    android:textColor="@color/white"
                    android:fontFamily="@font/opensansbold"
                    android:textSize="@dimen/txt_size"
                    android:paddingLeft="5dp"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:id="@+id/txt_wait"
                    android:layout_below="@id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ready_to_play"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_size"
                    android:layout_marginBottom="5dp"
                    />

                <TextView
                    android:id="@+id/txt5"
                    android:layout_below="@id/txt_wait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_luck"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_size"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_game"
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_map"
                    android:background="@color/map_bg"
                    android:scaleType="fitXY"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@color/story_bg"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:text="@string/start_game_msg1"
                            android:textSize="@dimen/txt_size"
                            android:textColor="@color/txt_yellow_color"
                            android:fontFamily="@font/opensanssemibold"
                            android:layout_marginLeft="10dp"/>
                        <TextView
                            android:id="@+id/txt_story"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/txt_size"
                            android:text="@string/storymsg"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:text="@string/start_game_msg2"
                            android:textSize="@dimen/txt_size"
                            android:fontFamily="@font/opensanssemibold"
                            android:textColor="@color/txt_yellow_color"
                            android:layout_marginLeft="10dp"/>
                        <TextView
                            android:id="@+id/txt_start_point"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/txt_size"
                            android:text="@string/starting_point"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:text="@string/start_game_msg3"
                            android:textSize="@dimen/txt_size"
                            android:textColor="@color/txt_yellow_color"
                            android:fontFamily="@font/opensanssemibold"
                            android:layout_marginLeft="10dp"/>
                        <TextView
                            android:id="@+id/txt_end_point"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/txt_size"
                            android:text="@string/endpoint"/>

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_total_player"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/solve_btn_color"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_size"
                android:fontFamily="@font/opensanssemibold"
                android:visibility="gone"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/invitee_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/footer_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="visible"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="210dp"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:background="@drawable/btn_shape_bg"
            android:gravity="center"
            android:layout_centerInParent="true"
            >
            <TextView
                android:id="@+id/txt_about"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/about_btn"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/opensansbold"
                android:textSize="@dimen/btn_txt_size"
                android:textAlignment="center"
                android:paddingLeft="10dp"
                android:layout_margin="5dp"
                android:gravity="center"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_gamepad"
                android:padding="13dp"
                android:visibility="gone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_shape_bg"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginRight="10dp"
            android:visibility="gone">
            <TextView
                android:id="@+id/txt_start"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/start_play"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/opensansbold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginLeft="10sp"
                android:background="@drawable/btn_shape_bg"
                android:gravity="center"
                android:layout_alignParentRight="true"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/men"
                android:padding="7dp"/>
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>