<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity"
    android:background="@drawable/homescreen"
    android:fitsSystemWindows="true"
    android:id="@+id/infomainbg">
    <ScrollView
        android:id="@+id/info_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="50dp"
                app:cardUseCompatPadding="true"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp">
                <TextView
                    android:layout_width="140dp"
                    android:layout_height="35dp"
                    android:text="@string/invitee_scenario"
                    android:textSize="@dimen/txt_size"
                    android:fontFamily="@font/opensansbold"
                    android:textColor="@color/txt_color"
                    android:gravity="center"
                    android:background="@drawable/txt_round_bg"
                    android:visibility="gone"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="210dp"
                android:layout_height="210dp"
                app:cardUseCompatPadding="true"
                android:layout_gravity="center"
                app:cardElevation="0dp"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_marginTop="@dimen/logo_vertical_space"
                app:cardBackgroundColor="@android:color/transparent"
                >
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/logo"/>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/info_section"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:hint="@string/info_msg1"
                    android:fontFamily="@font/opensanssemibold"
                    android:textColorHint="@color/txt_color"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/txt_round_bg"
                    />
                <EditText
                    android:id="@+id/edt_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:hint="@string/info_msg2"
                    android:textColorHint="@color/txt_color"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:fontFamily="@font/opensanssemibold"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/txt_round_bg"
                    />
                <EditText
                    android:id="@+id/edt_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:paddingLeft="20dp"
                    android:singleLine="true"
                    android:hint="@string/info_msg3"
                    android:textColorHint="@color/txt_color"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:fontFamily="@font/opensanssemibold"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/txt_round_bg"
                    />
                <ImageView
                    android:layout_width="101dp"
                    android:layout_height="73dp"
                    android:src="@drawable/start_point"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/starting_point"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sub_txt_size"
                    android:textAlignment="center"
                    android:visibility="gone"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="210dp"
                    android:layout_height="70dp"
                    app:cardUseCompatPadding="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardElevation="0dp">
                    <Button
                        android:id="@+id/btn_next"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:text="@string/next_btn"
                        android:textSize="@dimen/btn_txt_size"
                        android:textColor="@color/btn_txt_color"
                        android:gravity="center"
                        android:fontFamily="@font/opensanssemibold"
                        android:layout_gravity="center"
                        android:background="@drawable/btn_shape_bg"/>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>