<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.DiscoverFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_finish"
                        android:scaleType="fitXY"
                        android:layout_gravity="center"
                        >
                        <LinearLayout
                            android:id="@+id/container"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:src="@drawable/ic_round_true"
                                android:layout_marginTop="50dp"
                                android:layout_gravity="center_horizontal"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/finish_msg1"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textSize="@dimen/btn_txt_size"
                                android:textColor="@color/txt_dark_color"
                                />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/finish_msg2"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:textSize="@dimen/btn_txt_size"
                                android:textColor="@color/progress_end_color"
                                />
                        </LinearLayout>
                        </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_finish"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardUseCompatPadding="true"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                android:clickable="true"
                android:layout_marginBottom="10dp"
                >
                <Button
                    android:id="@+id/btn_verify"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/meet_perk"
                    android:textSize="@dimen/btn_txt_size"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/blue_btn_shape"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:clickable="false"
                    />

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>